fix: clean up 🔨
